# lidar_perception

./: .gitattributes  .gitignore  .gitmodules  README.md
samples/odom_project/SuperOdom/: readme.md
samples/odom_project/SuperOdom/doc/: LOCALIZATION.md
samples/odom_project/SuperOdom/super_odometry/: CMakeLists.txt  ros2.rviz
samples/odom_project/SuperOdom/super_odometry/config/: livox_mid360.yaml  os1_128.yaml  vlp_16.yaml
samples/odom_project/SuperOdom/super_odometry/include/super_odometry/FeatureExtraction/: featureExtraction.h
samples/odom_project/SuperOdom/super_odometry/include/super_odometry/LidarProcess/: LidarSlam.h
samples/odom_project/SuperOdom/super_odometry/include/super_odometry/config/: parameter.h
samples/odom_project/SuperOdom/super_odometry/include/super_odometry/utils/: superodom_utils.h
samples/odom_project/SuperOdom/super_odometry/src/: featureExtraction_node.cpp
samples/odom_project/SuperOdom/super_odometry/src/LidarProcess/: LidarSlam.cpp
samples/odom_project/SuperOdom/super_odometry/src/parameter/: parameter.cpp
samples/odom_project/SuperOdom/super_odometry/src/utils/: superodom_utils.cpp
samples/odom_project/funny_lidar_slam/: CMakeLists.txt  README.md  package.xml
samples/odom_project/funny_lidar_slam/config/mapping/: config_mid_360.yaml  config_nclt.yaml
samples/odom_project/funny_lidar_slam/launch/: mapping_mid360.launch.py
scripts/: gitmodules.sh  odom_start.sh  odom_to_mavros.py
src/data_combine/: CMakeLists.txt  package.xml
src/data_combine/config/: data_combine_config.yaml
src/data_combine/launch/: data_combine.launch.py
src/data_combine/src/: data_combine.cpp
src/datacombine/: CMakeLists.txt  README.md  package.xml
src/datacombine/config/: merge_config.yaml
src/datacombine/include/: datacombine.hpp
src/datacombine/launch/: datacombine.launch.py
src/datacombine/scripts/: auto_run.sh
src/datacombine/src/: datacombine.cpp  main.cpp  main_test.cpp
src/dataconvert/: package.xml
src/dataconvert/config/: dataconvert_config.yaml
src/dataconvert/launch/: livox_to_pointcloud2_1.launch.yml  livox_to_pointcloud2_2.launch.yml
src/dataconvert/src/: livox_to_pointcloud2.cpp
src/lidar_odom/: CMakeLists.txt  README.md  package.xml
src/lidar_odom/config/: lidar_left_odom.yaml  lidar_odom1.yaml  lidar_odom2.yaml  lio1.yaml  lio2.yaml
src/lidar_odom/include/: commons.h  ieskf.h  ikd_tree.h  odom_node.h  utils.h
src/lidar_odom/include/ieskf/: ieskf.h
src/lidar_odom/include/imu_process/: imu_process.h  imu_processor.h
src/lidar_odom/include/lidar_process/: lidar_process.h  lidar_processor.h
src/lidar_odom/include/map_builder/: map_builder.h
src/lidar_odom/launch/: lidar_left_odom_launch.py  lidar_odom_launch1.py  lidar_odom_launch2.py  lidar_right_odom_launch.py  lio_launch.py  lio_launch1.py  lio_launch2.py
src/lidar_odom/rviz/: lidar_odom.rviz
src/lidar_odom/src/: commons.cpp  ieskf.cpp  ikd_tree.cpp  imu_process.cpp  imu_processor.cpp  lidar_process.cpp  lidar_processor.cpp  lio_node.cpp  main.cpp  map_builder.cpp  odom_node.cpp  utils.cpp
src/pointcloud_merge/: CMakeLists.txt  package.xml
src/pointcloud_merge/config/: merge_params.yaml
src/pointcloud_merge/launch/: merge.launch.py
src/pointcloud_merge/src/: lidar_merge.cpp
src/rog_map/: CMakeLists.txt  package.xml
src/rog_map/config/: rog_map.yaml
src/rog_map/include/rog_map/: esdf_map.h  free_cnt_map.h  inf_map.h  prob_map.h  rog_map.h
src/rog_map/include/rog_map/rog_map_core/: config.hpp  counter_map.h  sliding_map.h
src/rog_map/include/utils/: common_lib.hpp  raycaster.cpp  raycaster.h  scope_timer.hpp  visual_utils.hpp
src/rog_map/launch/: rog_map.launch.py
src/rog_map/rviz/: rog_map.rviz  rog_map_ros2.rviz
src/rog_map/src/: counter_map.cpp  esdf_map.cpp  inf_map.cpp  prob_map.cpp  rog_map.cpp  run_map.cpp  sliding_map.cpp
src/rog_map/src/rog_map/: esdf_map.cpp  inf_map.cpp  rog_map.cpp
test/launch_example/: lidar.launch.py
tools/code_reference/: lddc.cpp  preprocessing.cpp
tools/dataconvert/: CMakeLists.txt  README.md
tools/dataconvert/launch/: dataconvert.launch.py
tools/dataconvert/src/: dataconvert.cpp
tools/launch_example/: demo.launch.py  localization.launch.py
tools/livox_viewer2_v2.3.0/LivoxViewer2/Content/LidarConfigs/: HMSCodeConfig.json  ViewerConfig.json
tools/livox_viewer2_v2.3.0/LivoxViewer2/Saved/Config/LinuxNoEditor/: Engine.ini  GameUserSettings.ini
tools/livox_viewer2_v2.3.0/LivoxViewer2/Saved/SaveGames/: SavedGridConfig.sav
tools/odom_analy/: test.py
tools/rviz/: example.rviz
tools/scripts/: gitmodules.sh  odom_to_mavros.py
