<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dataconvert</name>
  <version>1.0.0</version>
  <description>Convert Livox custom messages to ROS 2 PointCloud2</description>
  
  <maintainer email="RenwangHuangX@gmail.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>